--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "tailwindcss": "^1.1.1",
+    "v-lazy-image": "^1.3.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
